--- a/venue.html
+++ b/venue.html
@@ -3,13 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Venue - Butterfly Calling</title>
+  <title>Venue – Butterfly Calling</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section class="venue-detail">
-    <h1>Festival Alanı</h1>
-    <p>Burada harita, ulaşım ve konaklama detayları yer alacak.</p>
+
+  <!-- ===== BAŞLIK ===== -->
+  <h1>VENUE</h1>
+<a href="index.html" class="site-logo">
+  <img src="assets/images/logo.png" alt="Butterfly Calling Logo">
+</a>
+  <!-- ===== GALERİ ===== -->
+  <section class="venue-gallery">
+    <div class="gallery-grid">
+      <img src="assets/images/venue1.jpeg" alt="Venue 1" />
+      <img src="assets/images/venue2.jpeg" alt="Venue 2" />
+      <img src="assets/images/venue3.jpeg" alt="Venue 3" />
+      <img src="assets/images/venue4.jpeg" alt="Venue 4" />
+    </div>
   </section>
+
+  <!-- ===== HARİTA ===== -->
+  <section class="venue-map">
+    <h2>LOCATION</h2>
+    <div class="map-container">
+      <iframe
+        src="https://maps.google.com/maps?q=41.077625,29.827437&z=15&output=embed"
+        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+    </div>
+  </section>
+
+  <!-- ===== HARİTA BAĞLANTISI ===== -->
+  <div class="venue-map-link">
+    <a href="https://maps.app.goo.gl/7qnXSZGGfVgck4NF6" target="_blank">
+      Google Haritalarda Aç
+    </a>
+  </div>
+
+  <!-- ===== İKONLAR ===== -->
+  <section class="venue-icons">
+    <div class="icon-row">
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/electricity.png" alt="Elektrik" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/tent.png" alt="Çadır" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/shower.png" alt="Duş" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/meal.png" alt="Yemek" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/wine-glass.png" alt="Alkol" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/music.png" alt="Live Music" />
+      </div>
+      <div class="icon-box">
+        <img src="https://img.icons8.com/ios-filled/24/ffffff/swimming-pool.png" alt="Havuz" />
+      </div>
+    </div>
+  </section>
+
 </body>
+<button class="back-button" onclick="history.back()">
+  &#8592;
+</button>
 </html>
