Tüm dosyalar güncellendi (21 Haziran 2025)

--- a/index.html
+++ b/index.html
@@ -23,56 +23,43 @@
   <section class="hero-section">
     <div class="hero-content">
       <h1>SECRET JUNGLE</h1>
-      <h2>MİNİ FESTİVAL</h2>
-      <p>26–28 Temmuz 2025</p>
+      <h2>MINI FEST</h2>
+      <p>16th of AUGUST</p>
     </div>
   </section>
   
 <!-- ========== VENUE KUTUSU ========== -->
 <section id="venue" class="venue-card">
-  <div class="venue-image" style="background-image: url('assets/images/venue.jpeg');">
-    <div class="venue-text">
-      <h2>VENUE</h2>
-      <p>Konaklama & Festival Alanı</p>
-      <a href="venue.html" class="venue-button">Detayları Gör</a>
-    </div>
-  </div>
+  <a href="venue.html" class="venue-card-box">
+    <h2>VENUE</h2>
+    <p>Konaklama & Festival Alanı</p>
+  </a>
 </section>
 
 
   <!-- ========== LINE-UP KUTUSU ========== -->
-<section id="lineup-preview" class="venue-card">
-  <div class="venue-image" style="background-image: url('assets/images/artist-preview.jpeg');">
-    <div class="venue-text">
-      <h2>LINE-UP</h2>
-      <p>Festival boyunca sahne alacak DJ'ler ve sanatçılar</p>
-      <a href="lineup.html" class="venue-button">Sanatçılara Göz At</a>
-    </div>
-  </div>
+<section id="lineup" class="venue-card">
+  <a href="lineup.html" class="venue-card-box">
+    <h2>LINE-UP</h2>
+    <p>Festival boyunca sahne alacak DJ'ler ve sanatçılar</p>
+  </a>
 </section>
 
 
 
 <!-- ========== ACTIVITIES KUTUSU ========== -->
-<section id="activities-preview" class="venue-card">
-  <div class="venue-image" style="background-image: url('assets/images/activities-preview.jpeg');">
-    <div class="venue-text">
-      <h2>ACTIVITIES</h2>
-      <p>Sanat, müzik, meditasyon ve yaratıcı atölyelerle içsel bir yolculuk</p>
-      <a href="activities.html" class="venue-button">Detayları Gör</a>
-    </div>
-  </div>
+<section id="activities" class="venue-card">
+  <a href="activities.html" class="venue-card-box">
+    <h2>ACTIVITIES</h2>
+    <p>Art, music, meditation, atelier ve daha fazlası</p>
+  </a>
 </section>
-
 <!-- ========== TICKET KUTUSU ========== -->
-<section id="ticket-preview" class="venue-card">
-  <div class="venue-image" style="background-image: url('assets/images/ticket-preview.jpeg');">
-    <div class="venue-text">
-      <h2>TICKET</h2>
-      <p>Festival katılımı için ön kayıt formunu doldur</p>
-      <a href="ticket.html" class="venue-button">Formu Aç</a>
-    </div>
-  </div>
+<section id="ticket" class="venue-card">
+  <a href="ticket.html" class="venue-card-box">
+    <h2>TICKET</h2>
+    <p>Festival katılımı için ön kayıt formunu doldur</p>
+  </a>
 </section>
 <section id="about" class="about-section">
   <div class="about-glass-box">
