Sabit arka plan desteği eklendi (21 Haziran 2025)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;600;800&display=swap" rel="stylesheet" />
 </head>
 <body id="index">
+  <!-- Sabit arka plan için -->
+<div class="fixed-bg"></div>
+<!-- ...mevcut içerik... -->
 
 
   <a href="index.html" class="site-logo">
