villa-begonvil.html ve yeni görseller güncellendi (21 Haziran 2025)

--- a/villa-begonvil.html
+++ b/villa-begonvil.html
@@ -14,6 +14,9 @@
       <img src="assets/images/accommodations/begonvil1.jpg" alt="">
       <img src="assets/images/accommodations/begonvil2.jpg" alt="">
       <img src="assets/images/accommodations/begonvil3.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil4.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil5.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil6.jpg" alt="">
     </div>
   </section>
 </body>
