Villa sayfaları ve yeni konaklama görselleri güncellendi (21 Haziran 2025)

--- a/villa-ates.html
+++ b/villa-ates.html
@@ -14,6 +14,13 @@
       <img src="assets/images/accommodations/ates1.jpg" alt="">
       <img src="assets/images/accommodations/ates2.jpg" alt="">
       <img src="assets/images/accommodations/ates3.jpg" alt="">
+      <img src="assets/images/accommodations/ates4.jpg" alt="">
+      <img src="assets/images/accommodations/ates5.jpg" alt="">
+      <img src="assets/images/accommodations/ates6.jpg" alt="">
+      <img src="assets/images/accommodations/ates7.jpg" alt="">
+      <img src="assets/images/accommodations/ates8.jpg" alt="">
+      <img src="assets/images/accommodations/ates9.jpg" alt="">
+
     </div>
   </section>
 </body>
