--- a/villa-defne.html
+++ b/villa-defne.html
@@ -14,6 +14,13 @@
       <img src="assets/images/accommodations/defne1.jpg" alt="">
       <img src="assets/images/accommodations/defne2.jpg" alt="">
       <img src="assets/images/accommodations/defne3.jpg" alt="">
+      <img src="assets/images/accommodations/defne4.jpg" alt="">
+      <img src="assets/images/accommodations/defne5.jpg" alt="">
+      <img src="assets/images/accommodations/defne6.jpg" alt="">
+      <img src="assets/images/accommodations/defne7.jpg" alt="">
+      <img src="assets/images/accommodations/defne8.jpg" alt="">
+      <img src="assets/images/accommodations/defne9.jpg" alt="">
+      <img src="assets/images/accommodations/defne10.jpg" alt="">
     </div>
   </section>
 </body>
