--- a/villa-begonvil.html
+++ b/villa-begonvil.html
@@ -17,6 +17,9 @@
       <img src="assets/images/accommodations/begonvil4.jpg" alt="">
       <img src="assets/images/accommodations/begonvil5.jpg" alt="">
       <img src="assets/images/accommodations/begonvil6.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil7.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil8.jpg" alt="">
+      <img src="assets/images/accommodations/begonvil9.jpg" alt="">
     </div>
   </section>
 </body>
