ticket.html tekrar güncellendi (21 Haziran 2025)

--- a/ticket.html
+++ b/ticket.html
@@ -14,7 +14,7 @@
 <section class="ticket-section">
   <div class="form-container">
     <h2>Bilet Kayıt Formu</h2>
-   <form action="https://script.google.com/macros/s/AKfycbzCOC_zaaVWh5H74GmUn38tCF_HZ2gCkvhwqWAaIn73owvhtREz-ba3jZ5xClMNzx7QBw/exec" method="POST"></form>
+   <form action="https://script.google.com/macros/s/AKfycbzCOC_zaaVWh5H74GmUn38tCF_HZ2gCkvhwqWAaIn73owvhtREz-ba3jZ5xClMNzx7QBw/exec" method="POST">
 
       <!-- AD SOYAD -->
       <label for="fullname">Ad Soyad *</label>
