--- a/ticket.html
+++ b/ticket.html
@@ -14,8 +14,8 @@
 <section class="ticket-section">
   <div class="form-container">
     <h2>Bilet Kayıt Formu</h2>
-   <form action="https://script.google.com/macros/s/AKfycbzCOC_zaaVWh5H74GmUn38tCF_HZ2gCkvhwqWAaIn73owvhtREz-ba3jZ5xClMNzx7QBw/exec" method="POST">
 
+    <form id="ticket-form">
       <!-- AD SOYAD -->
       <label for="fullname">Ad Soyad *</label>
       <input type="text" id="fullname" name="fullname" placeholder="Adınız ve Soyadınız" required>
@@ -52,29 +52,48 @@
       <button type="submit">Formu Gönder</button>
     </form>
 
-    <!-- ✅ BAŞARI POPUP -->
+    <!-- BAŞARI POPUP -->
     <div id="success-popup" class="success-popup hidden">
       <div class="popup-content">
         <h3>✅ Başvuru Alındı</h3>
         <p>En kısa sürede seninle iletişime geçeceğiz.</p>
       </div>
     </div>
+
   </div>
 </section>
 
-<!-- ✅ JS: Popup Gösterimi -->
+<!-- ✅ FORM JS -->
 <script>
-  const form = document.querySelector("form");
-  const popup = document.getElementById("success-popup");
+  document.getElementById('ticket-form').addEventListener('submit', function(e) {
+    e.preventDefault();
 
-  form.addEventListener("submit", function (e) {
-    e.preventDefault(); // Test için durdurduk
-    popup.classList.remove("hidden");
+    const data = {
+      fullname: document.getElementById('fullname').value,
+      phone: document.getElementById('phone').value,
+      email: document.getElementById('email').value,
+      participation: document.getElementById('participation').value,
+      message: document.getElementById('message').value
+    };
 
-    setTimeout(() => {
-      popup.classList.add("hidden");
-      form.reset(); // form temizleniyor
-    }, 3000);
+    fetch('https://script.google.com/macros/s/AKfycbxpSj37qEktp2--5ediJ7fW78T3aJIqO40xY1QqFJcMJ39bqOaAfILtqy0XSNMMnnVK/exec', {
+      method: 'POST',
+      body: JSON.stringify(data),
+      headers: {
+        'Content-Type': 'application/json'
+      }
+    })
+    .then(response => response.json())
+    .then(result => {
+      document.getElementById('success-popup').classList.remove('hidden');
+      setTimeout(() => {
+        document.getElementById('success-popup').classList.add('hidden');
+        document.getElementById('ticket-form').reset();
+      }, 3000);
+    })
+    .catch(error => {
+      alert('Gönderim sırasında hata oluştu. Lütfen tekrar deneyin.');
+    });
   });
 </script>
 
