--- a/ticket.html
+++ b/ticket.html
@@ -1,11 +1,3 @@
-https://script.google.com/macros/s/AKfycbxDc-W1-ZjK-YfRgL_gTJEPVYncou-YCNDqssOFXvlezCYTrX-S6OHy_PmAYVVsWTid/exec
-```) entegre eden tam `ticket.html` ve `script.js` dosyaları yer alıyor:
-
----
-
-## 📄 ticket.html
-
-```html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -13,54 +5,85 @@ https://script.google.com/macros/s/AKfycbxDc-W1-ZjK-YfRgL_gTJEPVYncou-YCNDqssOFX
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Butterfly Calling – Ticket</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
+  <meta name="description" content="Butterfly Calling - Secret Jungle Mini Fest">
+  <link rel="preload" href="assets/fonts/unbounded.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 <body>
 
   <a href="index.html" class="back-button">← Geri</a>
 
-  <section class="ticket-section">
-    <div class="form-container">
-      <h2>Bilet Kayıt Formu</h2>
+  <main role="main">
+    <article>
+      <header>
+        <h1>Bilet Kayıt Formu</h1>
+      </header>
+      <section aria-label="Content">
+        <div class="form-container">
+          <h2>Bilet Kayıt Formu</h2>
 
-      <form id="ticket-form">
-        <label for="fullname">Ad Soyad *</label>
-        <input type="text" id="fullname" name="fullname" required>
+          <!-- ✅ Formsubmit.co entegrasyonu -->
+          <form method="POST" action="/api/submit">
+            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            <label for="fullname">Ad Soyad *</label>
+            <input type="text" id="fullname" name="Ad Soyad" required>
 
-        <label for="phone">Telefon *</label>
-        <input type="tel" id="phone" name="phone" placeholder="05XXXXXXXXX" pattern="[0-9]{10,11}" required>
+            <label for="phone">Telefon *</label>
+            <input type="tel" id="phone" name="Telefon" placeholder="05XXXXXXXXX" pattern="[0-9]{10,11}" required>
 
-        <label for="email">E-posta *</label>
-        <input type="email" id="email" name="email" required>
+            <label for="email">E-posta *</label>
+            <input type="email" id="email" name="Eposta" required>
 
-        <label for="participation">Katılım Tipi *</label>
-        <select id="participation" name="participation" required>
-          <option value="" disabled selected>Seçiniz</option>
-          <option value="Daily Pass / 1.500₺">Daily Pass / 1.500₺</option>
-          <option value="After Pass / 2.000₺">After Pass / 2.000₺</option>
-          <option value="Standart Accommodation / 3.000₺">Standart Accommodation / 3.000₺</option>
-          <option value="VIP Accommodation / ?">VIP Accommodation / ?</option>
-        </select>
+            <label for="participation">Katılım Tipi *</label>
+            <select id="participation" name="Katılım Tipi" required>
+              <option value="" disabled selected>Seçiniz</option>
+              <option>Daily Entry / 1.500₺</option>
+              <option>All Day All Night / 2.000₺</option>
+              <option>Standart Accommodation / 6.000₺</option>
+              <option>Vip Villa Options </option>
+            </select>
 
-        <label for="message">Ek Not veya Soru</label>
-        <textarea id="message" name="message"></textarea>
+            <label for="message">Notunuz</label>
+            <textarea id="message" name="Mesaj"></textarea>
 
-        <label>
-          <input type="checkbox" name="kvkk" required>
-          KVKK metnini okudum, onaylıyorum.
-        </label>
+            <!-- Gizli ayarlar -->
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_subject" value="Yeni Butterfly Calling Formu!">
+            <input type="hidden" name="_template" value="box">
 
-        <button type="submit">Formu Gönder</button>
-      </form>
+            <!-- KVKK -->
+            <label>
+              <input type="checkbox" required>
+              KVKK metnini okudum, onaylıyorum.
+            </label>
 
-      <div id="success-popup" class="success-popup hidden">
-        <div class="popup-content">
-          <h3>✅ Başvuru Alındı</h3>
-          <p>En kısa sürede seninle iletişime geçeceğiz.</p>
+            <button type="submit">Formu Gönder</button>
+          </form>
+
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
+    </article>
+  </main>
 
-  <script src="script.js"></script>
+  <script>
+    // Form validation
+    const validateForm = (data) => {
+      const errors = {};
+      if (!data.phone.match(/^05[0-9]{9}$/)) {
+        errors.phone = 'Geçerli bir telefon numarası giriniz';
+      }
+      return errors;
+    };
+
+    // Environment variables
+    const API_URL = process.env.API_URL || 'default_url';
+  </script>
+
+  <!-- Resimlerde lazy loading -->
+  <img src="image.jpg" loading="lazy" alt="Description">
+
+  <!-- CSS minify -->
+  <link rel="stylesheet" href="style.min.css">
+
 </body>
 </html>
