--- a/ticket.html
+++ b/ticket.html
@@ -18,7 +18,7 @@
       <div class="form-container">
         <h2>Bilet Kayıt Formu</h2>
 
-        <form action="https://formsubmit.co/furkanerbey@hotmail.com" method="POST">
+        <form action="https://formsubmit.co/butterfly.callings@gmail.com" method="POST">
           <!-- ✏️ Buraya kendi e-posta adresini yaz: YOUR_EMAIL_HERE -->
 
           <label for="fullname">Ad Soyad *</label>
